--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,23 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "./images/logo.png",
+      "type": "image/png",
+      "sizes": "1024x1024",
+      "purpose": "maskable"
     },
     {
-      "src": "logo192.png",
+      "src": "./images/logo.png",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "./images/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
